Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-34995

Key in runloop exception log trace not marked up for later redaction

    XMLWordPrintable

Details

    • Untriaged
    • Unknown
    • KV-Engine Mad-Hatter Beta

    Description

      In this comment we see the unmarked up key show in the logs.

      Here's the log trace for convenience:

      2019-07-09T04:07:52.490380-07:00 ERROR 53: exception occurred in runloop during packet execution. Cookie info: [{"aiostat":"success","connection":"[ 127.0.0.1:49642 - 127.0.0.1:11209 (<ud>@ns_server</ud>) ]","engine_storage":"0x00007f78c2c8c810","ewouldblock":false,"packet":{"bodylen":100,"cas":1562670424947032064,"datatype":["JSON","Snappy"],"extlen":31,"key":"<ud>.test_docs-2873</ud>","keylen":15,"magic":"ClientRequest","opaque":42,"opcode":"DCP_MUTATION","vbucket":484},"refcount":1}] - closing connection ([ 127.0.0.1:49642 - 127.0.0.1:11209 (<ud>@ns_server</ud>) ]): PassiveDurabilityMonitor::resolvePrepare: Pending resolution for 'SW @0x7f78deb93c70 cookie:0 qi:[key:'cid:0x0:txn-client-record' seqno:1 reqs:{Majority, timeout=infinite}] maj:0 #1stChainAcks:0 1stChainAcks:[] #2ndChainAcks:0 2ndChainAcks:[]', but received unexpected commit for key cid:0x0:test_docs-2873
      

      Note that it looks like two keys are showing unmarked up.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ashwin.govindarajulu Ashwin Govindarajulu
            dfinlay Dave Finlay
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty