MB-34995: [DM] Keys should be marked for log redaction

Add log redaction tags for the keys when used in exceptions
or logs in the durability manager.

Change-Id: I05c96243d426e8573a6a73148492c0ea04ac08f3
Reviewed-on: http://review.couchbase.org/112019
Tested-by: Trond Norbye <trond.norbye@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>